# mcp-opensearch

./: .gitignore  ANALYST_NOTES.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  server.py  setup.sh
.github/workflows/: ci.yml  release.yml
lib/: client.py
