[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-opensearch"
version = "0.3.0"
description = "Read-only MCP server for OpenSearch and OpenSearch Dashboards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "opensearch", "llm", "claude", "observability", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp",
    "requests>=2.28,<3",
    "python-dotenv>=1.0,<2",
    "urllib3>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/bunnyiesart/mcp-opensearch"
Repository = "https://github.com/bunnyiesart/mcp-opensearch"
Changelog = "https://github.com/bunnyiesart/mcp-opensearch/blob/main/CHANGELOG.md"

[project.scripts]
mcp-opensearch = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py", "lib/"]
